added bennugd submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "wiki"]
 	path = wiki
 	url = https://github.com/tehuel/bgd-tilescroll.wiki.git
+[submodule "bin"]
+	path = bin
+	url = https://github.com/tehuel/bgd-bin.git
