--- a/.travis.yml
+++ b/.travis.yml
@@ -24,3 +24,11 @@ before_script:
 
 script:
   - ./test.sh
+
+deploy:
+  provider: releases
+  api_key: 3a2a0b4a47fdc0cf09901765a2879ea935af3046
+  file: tilescroll.prg
+  skip_cleanup: true
+  on:
+    tags: true
